WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287588
REGRESSION(
290300@main
): Broke the Internal visionOS build
https://bugs.webkit.org/show_bug.cgi?id=287588
Summary
REGRESSION(290300@main): Broke the Internal visionOS build
Jonathan Bedard
Reported
2025-02-12 15:52:56 PST
290300@main
broke the Internal visionOS build.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2025-02-12 15:52:57 PST
<
rdar://problem/144736661
>
Jonathan Bedard
Comment 2
2025-02-12 15:54:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40511
EWS
Comment 3
2025-02-12 16:08:52 PST
Committed
290310@main
(a2539d12bce4): <
https://commits.webkit.org/290310@main
> Reviewed commits have been landed. Closing PR #40511 and removing active labels.
Jonathan Bedard
Comment 4
2025-02-12 20:08:30 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/40530
EWS
Comment 5
2025-02-12 20:13:33 PST
Committed
290317@main
(448b988eb043): <
https://commits.webkit.org/290317@main
> Reviewed commits have been landed. Closing PR #40530 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug