REGRESSION(290300@main): Broke the Internal visionOS build https://bugs.webkit.org/show_bug.cgi?id=287588 rdar://144736661

Unreviewed build fix.

* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferSetProxy.cpp:
(WebKit::RemoteImageBufferSetProxy::sendSync):

Canonical link: https://commits.webkit.org/290310@main